fix(frontend): handle scrollbar

--- a/onlyoffice-monday-gateway/src/main/frontend/styles/styles.css
+++ b/onlyoffice-monday-gateway/src/main/frontend/styles/styles.css
@@ -1,12 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@layer utilities {
-      	.no-scrollbar::-webkit-scrollbar {
-          	display: none;
-      	}
-      	.no-scrollbar {
-          	-ms-overflow-style: none;
-          	scrollbar-width: none;
-       	}
+
+html {
+	scroll-behavior: smooth;
+}
+
+*::-webkit-scrollbar {
+    width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    border: 3px solid #f1f1f1;
 }
